deployments/kubernetes/overlays/staging/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: codetry
    tier: backend
  name: codetry-deployment
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: php
          resources:
            limits:
              cpu: 700m
              memory: 1300Mi
            requests:
              cpu: 50m
              memory: 300Mi
        - name: nginx
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
            requests:
              cpu: 10m
              memory: 63Mi
