deployments/kubernetes/overlays/staging/deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  labels:
    app: mongo
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: mongo
          resources:
            limits:
              cpu: 2000m
              memory: 4000Mi
            requests:
              cpu: 500m
              memory: 1000Mi
