deployments/kubernetes/overlays/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codetry-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /mock-server(/|$)(.*)
            backend:
              serviceName: nginx
              servicePort: 80
      host: codetry-staging.kube.drom.ru
